fix(): fix comments for swagger
