# routes/api.php
@@ -9,6 +9,7 @@ use Illuminate\Support\Facades\Route;
 Route::resource('/singers', SingerController::class);
 
 Route::resource('/albums', AlbumController::class);
-Route::post('/albums/{album}/storeSongList', [AlbumController::class, 'storeSongList']);
+
+Route::post('/albums/{album}/attachSongList', [AlbumController::class, 'attachSongList']);
 
 Route::resource('/songs', SongController::class);
